--- a/Report/pictures/fermi-hubbard/jordan-wigner-phase-diagram.tex
+++ b/Report/pictures/fermi-hubbard/jordan-wigner-phase-diagram.tex
@@ -7,9 +7,9 @@
 			width=0.75\textwidth,
 			xlabel={$\Delta$},		ylabel={$h/J$},
 			xlabel style={right}, 	ylabel style={above},
-			xtick={1},				ytick={-1},
+			xtick={1},				ytick={1},
 			xticklabel style={below},
-			yticklabel style={right, xshift=0.2cm},
+			yticklabel style={below right, xshift=0.1cm},
 			xmin=-1.5, 				ymin=-2,
 			xmax=2.5, 				ymax=2
 		]
@@ -30,22 +30,22 @@
 		\addplot[name path=HFDown2, domain=1.5:2.5, dashed] 
 			{-x-1};
 		\addplot[name path=Border, domain=-1.5:2.5]
-			{x};
-		\path[name path=SupportUp] 
-			(-1.5,3) -- (2.5,3);
+			{-x};
+		\path[name path=SupportDown] 
+			(-1.5,-3) -- (2.5,-3);
 		\addplot[pattern=north west lines, pattern color=gray!50]
-			fill between [of = SupportUp and Border];
+			fill between [of = SupportDown and Border];
 
-		\node[anchor=north west, color=tabblue]
+		\node[anchor=south west, color=tabblue]
 			at (axis cs:0,0) {XY};
-		\node[anchor=north east, color=tabred]
-			at (axis cs:0,-1) {HF};
+		\node[anchor=south east, color=tabred]
+			at (axis cs:0,1) {HF};
 		\node[anchor=south west, color=tabgreen]
 			at (axis cs:1.75,0) {HAF};
-		\node[anchor=south east] 
-			at (axis cs:2.5,-2) {$\mu/t > 0$};
-		\node[anchor=north west] 
-			at (axis cs:-1.5,2) {$\mu/t < 0$};
+		\node[anchor=north east] 
+			at (axis cs:2.5,2) {$\mu/t > 0$};
+		\node[anchor=south west] 
+			at (axis cs:-1.5,-2) {$\mu/t < 0$};
 
 	\end{axis}
 \end{tikzpicture}
