--- a/Report/sections/fermi-hubbard.tex
+++ b/Report/sections/fermi-hubbard.tex
@@ -78,21 +78,32 @@ The Jordan-Wigner mapping, only feasible in one dimension due to sites ordering,
 	\qquad
 	\hat S_j^z \to \hat n_j - \frac{\mathbb{I}}{2}
 \]
-Notice the appearance of the Jordan string,
+It can be shown rather easily that, if the $c$-operators are canonically fermionic (which is, $\lbrace c_j, c_k^\dagger \rbrace = \delta_{jk}$) then the $3$D $\mathfrak{su}(2)$ spin algebra is preserved by this mapping. Notice the appearance of the Jordan parity operator up to site $j-1$, $\hat{\mathrm{P}}_{j-1}$, with
 \[
-	e^{i\pi \sum_{k < j} \hat c_k^\dagger \hat c_k} = (-1)^{\zeta_j}
+	\hat{\mathrm{P}}_\ell = e^{i\pi \sum_{k \le \ell} \hat c_k^\dagger \hat c_k}
+	\quad\to\quad
+	(-1)^{\zeta_\ell}
 	\qquad
-	\zeta_j \equiv \sum_{k < j} \hat n_k
+	\zeta_\ell \equiv \sum_{k \le \ell} \hat n_k
 \]
-Essentially, the above string counts the fermions \textit{before} the site in question and gives back a factor $+1$ for even number, $-1$ for odd number. This works for open-ends chains, where the concept of \textit{before} is actually well-defined. It is straightforward to see:
+Essentially, the above string counts the fermions \textit{before} the site in question and gives back a factor $+1$ for even number, $-1$ for odd number. This works for open-ends chains, where the concept of \textit{before} is actually well-defined. 
+
+Using basic algebra, it is straightforward to see:
 \[
 	\begin{aligned}
-		S_{j+1}^+ \hat S_j^- &\to (-1)^{\zeta_{j+1}+\zeta_j} \hat c_{j+1}^\dagger \hat c_j = (-1)^{n_j} \hat c_{j+1}^\dagger \hat c_j = - c_{j+1}^\dagger \hat c_j \\
-		S_{j+1}^- \hat S_j^+ &\to (-1)^{\zeta_{j+1} \zeta_j} \hat c_{j+1} \hat c_j^\dagger = (-1)^{n_j+1} \hat c_j^\dagger \hat c_{j+1} = - c_{j+1}^\dagger \hat c_j \\
+		S_j^+ \hat S_{j+1}^- &\to \left(
+			\hat{\mathrm{P}}_{j-1} \hat c_j^\dagger
+		\right) \left(
+			\hat{\mathrm{P}}_j \hat c_{j+1}
+		\right) = \hat c_j^\dagger \hat c_{j+1} \\
+		S_j^- \hat S_{j+1}^+ &\to \left(
+			\hat{\mathrm{P}}_{j-1} \hat c_j
+		\right) \left(
+			\hat{\mathrm{P}}_j \hat c_{j+1}^\dagger
+		\right) = \hat c_{j+1}^\dagger \hat c_j \\
 	\end{aligned}
 \]
-having used $\zeta_j + \zeta_{j+1} = 2 \zeta_j + n_j$.
-Let me take a $1\mathrm{D}$ spin chain with open boundary conditions (OBC). The transformation gives
+Indeed, the product operator $c_j^\dagger \hat{\mathrm{P}}_j$ vanishes if the site $j$ is occupied. Then site $j$ does not contribute to parity, giving $\mathrm{P}_{j-1}=\mathrm{P}_j$. Identical reasoning holds for the line below, completed by an anticommutation of Fermi operators. Let me take a $1\mathrm{D}$ spin chain with open boundary conditions (OBC). The transformation gives
 \[
 	\begin{aligned}
 		\hat H_\mathrm{XXZ} &\equiv \sum_{j=1}^{L-1} \left[
@@ -101,7 +112,7 @@ Let me take a $1\mathrm{D}$ spin chain with open boundary conditions (OBC). The 
 			\right) + J_z \hat S_j^z \hat S_{j+1}^z
 		\right] - h \sum_{j=1}^L \hat S_j^z \\
 		&= \sum_{j=1}^{L-1} \left[
-			- \frac{J_{xy}}{2} \left(
+			\frac{J_{xy}}{2} \left(
 				\hat c_j^\dagger \hat c_{j+1} + \hat c_{j+1}^\dagger \hat c_j
 			\right) + J_z \left(
 				\hat n_j - \frac{\mathbb{I}}{2}
@@ -112,7 +123,7 @@ Let me take a $1\mathrm{D}$ spin chain with open boundary conditions (OBC). The 
 			\hat n_{j} - \frac{\mathbb{I}}{2}
 		\right) \\
 		&= \sum_{j=1}^{L-1} \left[
-			- \frac{J_{xy}}{2} \left(
+			\frac{J_{xy}}{2} \left(
 				\hat c_j^\dagger \hat c_{j+1} + \hat c_{j+1}^\dagger \hat c_j
 			\right) + J_z \hat n_j \hat n_{j+1}
 		\right] - \sum_{j=1}^L h_j \hat n_{j}
@@ -126,7 +137,61 @@ where I defined:
 		h + J_z &\qq{if} 1<j<L
 	\end{cases}
 \]
-Apart from a constant energy shift, in the bulk ($1<j<L$) this is the spinless fermions hamiltonian in Eq.~\eqref{eq:spinless-hamiltonian-pbc} with the following maps:
+Notice that for OBC the field term at the ends of the chain misses half the $J_z$ correction to the field, because of the missing interaction link.
+
+Now I close the chain. This amounts to add a new interaction term,
+\[
+	\hat H_\mathrm{XXZ} \to \hat H_\mathrm{XXZ} + \frac{J_{xy}}{2} \left( 
+		\hat S_L^+ \hat S_1^- + \hat S_L^- \hat S_1^+
+	\right) + J_z \hat S_L^z \hat S_1^z
+\]
+Jordan-Wigner mapping requires a little more care here. Since
+\[
+	\begin{aligned}
+		\hat S_L^+ \hat S_1^- &= \left(
+			\hat{\mathrm{P}}_{L-1} \hat c_L^\dagger
+		\right) \hat c_1 = \left(
+			\hat{\mathrm{P}}_L \hat c_L^\dagger
+		\right) \hat c_1 = (-1)^{\#_F -1} c_L^\dagger \hat c_1 \\
+		\hat S_L^- \hat S_1^+ &= \left(
+			\hat{\mathrm{P}}_{L-1} \hat c_L
+		\right) \hat c_1^\dagger = \left(
+			-\hat{\mathrm{P}}_L \hat c_L
+		\right) \hat c_1^\dagger = -(-1)^{\#_F+1} c_L \hat c_1^\dagger = (-1)^{\#_F+1} \hat c_1^\dagger c_L
+	\end{aligned}
+\]
+The first line holds because the $L$-th site must be empty, thus leaving unchanged the parity operator when extending $\mathrm{P}_{L-1} \to \mathrm{P}_L$, and simultaneously to evaluate the total chain parity after having applied $\hat c_1$ gives non-zero result only if the first site is occupied. Then, calling $\#_F$ the total number of fermions on the chain, the final parity is $\#-1$ which accounts for the first line sign prefactor. An analogous argument holds as well for the second line. We conclude that:
+\begin{itemize}
+	\item if the total number of fermions on the chain is \textbf{odd}, $\#_F = 2n+1$ for $n \in \mathbb{N}$, we can add the new interaction term to the hamiltonian with identical form,
+	\begin{equation}\label{eq:xxz-hamiltonian-intermediate}
+		\hat H_\mathrm{XXZ} = \sum_{j=1}^L \left[
+			\frac{J_{xy}}{2} \left(
+				\hat c_j^\dagger \hat c_{j+1} + \hat c_{j+1}^\dagger \hat c_j
+			\right) + J_z \hat n_j \hat n_{j+1}
+		\right] - (h+J_z) \sum_{j=1}^L \hat n_{j}
+		\qquad
+		\left(
+			\hat c_{L+1} \equiv \hat c_1
+		\right)
+	\end{equation}
+	I neglected an irrelevant energy shift. The PBC-$\mathrm{XXZ}$ model is mapped onto a spinless fermion system with odd number of fermions.
+	\item if the total number of fermions on the chain is \textbf{even}, $\#_F = 2n+1$ for $n \in \mathbb{N}$, we can add the new interaction term to the hamiltonian closing the chain anti-periodically (or, equivalently, flipping the sign of the nearest-neighbor hopping term across the closing link),
+	\[
+		\hat H_\mathrm{XXZ} = \sum_{j=1}^L \left[
+		\frac{J_{xy}}{2} \left(
+				\hat c_j^\dagger \hat c_{j+1} + \hat c_{j+1}^\dagger \hat c_j
+			\right) + J_z \hat n_j \hat n_{j+1}
+		\right] - (h+J_z) \sum_{j=1}^L \hat n_{j}
+		\quad
+		\left(
+			\hat c_{L+1} \equiv - \hat c_1
+		\right)
+	\]
+	The APBC-$\mathrm{XXZ}$ model is mapped onto a spinless fermion system with even number of fermions.
+\end{itemize}
+For the sake of simplicity, I will limit this project to the first situation with an odd number of fermions. Since the PBC-$\mathrm{XXZ}$ admits for an exact Bethe-Ansatz solution, we can link the phase transitions of the two models.
+
+Apart from a constant energy shift, the hamiltonian \eqref{eq:xxz-hamiltonian-intermediate} is \textit{de-facto} identical to the spinless model of Eq.~\eqref{eq:spinless-hamiltonian-pbc} via the mapping
 \begin{equation}\label{eq:xxz-fermions-parameters-map}
 	t = \frac{J_{xy}}{2}
 	\qquad
@@ -134,33 +199,17 @@ Apart from a constant energy shift, in the bulk ($1<j<L$) this is the spinless f
 	\qquad
 	\mu = h + J_z
 \end{equation}
-A schematics of the mapping is given in Fig.~\ref{fig:jordan-wigner-mapping}.
-
-Now, add another site. This amounts for extra terms in the hamiltonian,
-\[
-	\hat H_\mathrm{XXZ} \to \hat H_\mathrm{XXZ} + \frac{J_{xy}}{2} \left( 
-		\hat S_L^+ \hat S_{L+1}^- + \hat S_L^- \hat S_{L+1}^+
-	\right) + J_z \hat S_L^z \hat S_{L+1}^z
-\]
-In order to identify the open ends, which is, close the chain onto itself, the condition is
-\[
-	\hat S_{L+1}^\alpha = \hat S_1^\alpha
-\]
-The first-site Jordan-Wigner string is trivial, $\zeta_1 = 0$. The implementation of periodic boundary conditions requires in operator space then $\zeta_{L+1} \to \zeta_1 = 0$. Finally, it is trivial to see
-\[
-	(-1)^{\zeta_L} \hat c_L^\dagger = (-1)^{\#_F} \hat c_L^\dagger
-	\qquad
-	(-1)^{\zeta_L+1} \hat c_L = (-1)^{\#_F} \hat c_L
-\]
-with $\#_F$ the total number of fermions on the chain. Putting all together, as long as $\#_F$ is \textbf{even} {\color{tabred}[Check: I have the suspect it should be odd, actually...]}, we can impose periodic boundary conditions,
-\[
-	\hat S_1^+ \hat S_L^- = - \hat c_L^\dagger \hat c_1
-	\qquad
-	\hat S_1^- \hat S_L^+ = - \hat c_1^\dagger \hat c_L
-\]
-Simpler reasoning holds for the $z$ terms. Putting all together, the PBC-$\mathrm{XXZ}$ model is mapped onto a spinless fermionic system on a ring with even number of particles, with the rules of Eq.~\eqref{eq:xxz-fermions-parameters-map}. Since the PBC-$\mathrm{XXZ}$ admits for an exact Bethe-Ansatz solution, we can link the phase transitions of the two models.
+A schematics of this mapping\footnote{
+	Note here that the \textit{exact} mapping between the two models up to this point would have been $t = - J_{xy}/2$. This sign flip is actually irrelevant for what concerns the goodness of the map: the zero-field PBC-$\mathrm{XXZ}$ phases are inverted under the canonical transformation given from sign-flipping the $xy$ spin components while leaving unchanged the $z$ one (see below). The same symmetry is implemented canonically for fermions by the fermionic-canonical transformation
+	\[
+	\hat c_i \to (-1)^i \hat c_i
+	\]
+	which is essentially a $\pi$ momentum shift. This transformation flips the hopping term sign leaving the others unchanged. Finally, this same sign problem would not have arisen if I would have chosen a slightly different but physically equivalent Jordan-Wigner mapping, connecting up-spins to holes and down-spins to particles.
+} is given in Fig.~\ref{fig:jordan-wigner-mapping}.
 
 \subsection*{Phase diagrams}
+
+The phase diagram of the $\mathrm{XXZ}$ model is readily obtained by the means of exact methods like Bethe Ansatz. Of course, the dominant parameter is the ratio $J_z/J_{xy}$ which measures the dominant contribution to energy given by spin-spin NN interaction ($z$ term) and spin diffusion ($xy$ term). Whenever $\abs{J_z} = \abs{J_{xy}}$, the model is of the Heisenberg class.
 
 \begin{figure}
 	\centering
@@ -169,12 +218,16 @@ Simpler reasoning holds for the $z$ terms. Putting all together, the PBC-$\mathr
 	\label{fig:xxz-phase-diagram}
 \end{figure}
 
-The phase diagram of the $\mathrm{XXZ}$ model is readily obtained by the means of exact methods like Bethe Ansatz. Of course, the dominant parameter is the ratio $J_z/J_{xy}$ which measures the dominant contribution to energy given by spin-spin NN interaction ($z$ term) and spin diffusion ($xy$ term). Whenever $\abs{J_z} = \abs{J_{xy}}$, the model is of the Heisenberg class.
-
-The basic, field free phase diagram is represented schematically in Fig.~\ref{fig:xxz-phase-diagram}.
+We can safely assume $J_{xy}>0$ and only consider the relative sign of $J_z$. This is easily seen: if we map
+\[
+	J_{xy} \to - J_{xy}
+	\qquad
+	J_z \to J_z
+\]
+which is, exchange the hopping sign, this is equivalent to flipping the sign of the $xy$ spin component while leaving the $z$ component unchanged. Such a map is canonical (does not impact the spin algebra). The phase diagram for negative-sign hopping is anti-symmetric with respect to this inversion. The same holds for finite field. The basic, field free phase diagram is represented schematically in Fig.~\ref{fig:xxz-phase-diagram}.
 \begin{enumerate}
 	\item The system tends to an Ising Ferromagnet for $J_z / J_{xy} < -1$, with dominant behavior the complete alignment of spins (which maps onto the spinless Fermi-Hubbard model as a completely filled chain). 
-	\item Moving across the first Heisenberg boundary, $J_z = - J_{xy}$, the dominant behavior is spin diffusion up to a perfect local fields free situation of $J_z = 0$. This phase maps onto the spinless Fermi-Hubbard model as a superconducting phase.
+	\item Moving across the first Heisenberg boundary, $J_z = - J_{xy}$, the dominant behavior for energy lowering is spin diffusion up to a perfect local fields free situation of $J_z = 0$. This phase maps onto the spinless Fermi-Hubbard model as a superconducting phase.
 	\item Crossing the second Heisenberg boundary, $J_z = J_{xy}$, the system tends to an Ising Anti-Ferromagnet, dominated by the Néel state configuration. The latter maps onto an half-filling and Mott-localized fermionic chain.
 \end{enumerate}
 For a fixed number system, this is the expected phase dynamics.
@@ -188,22 +241,22 @@ For a fixed number system, this is the expected phase dynamics.
 
 Now, define $J$ and $\Delta$ as in \cite{rakov2016symmetries}, which is
 \[
-	J_{xy} \equiv -J
+	J_{xy} \equiv J
 	\qquad\qquad
-	J_z \equiv -J\Delta
+	J_z \equiv J\Delta
 \]
-Notice that I set $J > 0$, while $\Delta \in \mathbb{R}$. This is because a simple canonical transformation (at zero field) of the fermionic operators (specifically, a $\pi$ shift in momentum) inverts the $xy$ coupling sign leaving unchanged the $z$ coupling. Then I may limit to $J>0$. This gives the mapping:
+This gives the mapping:
 \begin{equation}\label{eq:xxz-fermions-parameters-map-2}
-	t = - \frac{J}{2}
+	t = \frac{J}{2}
 	\qquad
 	\frac{V}{t} = 2\Delta
 	\qquad
-	\frac{\mu}{t} = - 2 \left(
-		\frac{h}{J} - \Delta
+	\frac{\mu}{t} = 2 \left(
+		\frac{h}{J} + \Delta
 	\right)
 \end{equation}
 Within this parametrization, the analytical phase diagram is the one depicted in Fig.~\ref{fig:xxz-field-phase-diagram} \cite{rakov2016symmetries}.
-Now, I use $\mu/t > 0$. This maps on the $\mathrm{XXZ}$ model as $h/J < \Delta$, a condition depicted in Fig.~\ref{fig:jordan-wigner-mapping}. Thus, running simulations in a regime $\mu/t > 0$ and $V/t \in \mathbb{R}$, what one expects is to encounter all three phases. Now, I need to reconnect this expectation in a bosonization framework.
+Now, I use $\mu/t > 0$. This maps on the $\mathrm{XXZ}$ model as $h/J > -\Delta$, a condition depicted in Fig.~\ref{fig:jordan-wigner-mapping}. Thus, running simulations in a regime $\mu/t > 0$ and $V/t \in \mathbb{R}$, what one expects is to encounter all three phases. Now, I need to reconnect this expectation in a bosonization framework.
 
 \begin{figure}
 	\centering
@@ -225,13 +278,13 @@ and is easily solved by a simple Fourier transformation,
 	\hat c_j \equiv \sum_k e^{ikj} \hat c_k
 \]
 (I am here using adimensional momenta $k$, since space has throughout been considered as a simple integer index) which leads to
-\[
+\begin{equation}\label{eq:XY-hamiltonian}
 	\hat H_0 = -t \sum_k \left[
 		e^{-ik} \hat c_k^\dagger \hat c_k + e^{ik} \hat c_k^\dagger \hat c_k
 	\right] = \sum_k \epsilon_k \hat c_k^\dagger \hat c_k
 	\quad\text{for}\quad
 	\epsilon_k = -2t \cos k
-\]
+\end{equation}
 The band $\epsilon_k$ is represented in Fig.~\ref{fig:XY-band}. At half-filling, this simple sinusoidal band presents a null Fermi energy at Fermi wavevector $k_F = \pm \pi/2$. Linearization of the band for subsequent bosonization is as well represented in Fig.~\ref{fig:XY-band}.
 
 \begin{figure}
@@ -247,4 +300,90 @@ I now \textit{bosonize} the spinless Fermi-Hubbard model. Recall the processes o
 \[
 	\hat c_j \to \hat \psi(x)
 \]
-We derived Eq.~\eqref{eq:free-field-hamiltonian} starting from a free-fermions situation, a condition which has led us to the appearance of the Fermi velocity $v_F$. Of course, a tuning of the hopping parameter $t$ in our lattice hamiltonian besides its free-particles kinetic values in the continuum limit could in principle give us another velocity (with respect to the respective free-fermions value). This amounts for a fermion mass tuning. \todo
+Let me reintroduce a lattice spacing $a$ for the sake of dimensional correctness. The bosonization of an hamiltonian of the kind of Eq.~\eqref{eq:XY-hamiltonian} has been treated at the very beginning of the present report. The only step to be done is the linearization depicted in Fig.~\ref{fig:XY-band},
+\[
+	-2t \cos (ka) \big|_{k = \pm \frac{\pi}{2a} + q} = 2t \cos \left(
+		\pm \frac{\pi}{2} + qa
+	\right) \simeq \pm (a J_{xy}) q
+\]
+I take as granted the result of Eq.~\eqref{eq:free-field-hamiltonian}, recognizing the Fermi velocity simply as
+\[
+	v_F = \partial_k \epsilon_k \big|_{k = k_F} = a J_{xy}
+\]
+(As always, I omit a term $\hbar=1$).
+For the sake of completeness, here I also derive the Dirac expression for the hamiltonian density of these linear dispersion fermions (which, of course, are massless). First, split the hamiltonian of Eq.~\eqref{eq:XY-hamiltonian},
+\[
+	\hat H_0 \simeq \hat H_0^{(\mathrm{R})} + \hat H_0^{(\mathrm{L})}
+	\quad\text{with}\quad
+	\hat H_0^{(s)} \equiv \sgn(s) v_F \sum_q q \left[ \hat c_k^{(s)} \right]^\dagger \hat c_k^{(s)}
+\]
+I take a continuum limit: with fixed $L$, I employ $a \to 0^+$. Then, transforming back to space,
+\[
+	\hat c_k^{(s)} = \frac{1}{\sqrt{L}} \int_0^L dx \, e^{-ikx} \hat \psi_s(x) 
+\]
+
+I define a shifted version of the fermionic field, just by centering the momenta around the Fermi points. This amounts to
+\[
+	\hat \psi_s (x) \equiv e^{i \sgn(s) k_F x} \hat \Psi_s (s)
+\]
+Then $q$ is defined with respect to the Fermi point $k = \sgn(s) k_F$, such that $q = k - \sgn(s) k_F$. It follows
+\[
+	\hat c_k^{(s)} = \frac{1}{\sqrt{L}} \int_0^L dx \, e^{-iqx} \hat \Psi_s(x)
+\]
+Then
+\[
+	H_0^{(s)} = \sgn(s) \frac{v_F}{L} \sum_q q \int_0^L dx \, e^{iqx} \hat \Psi_s^\dagger(x) \int_0^L dy \, e^{-iqy} \hat \Psi_s(y)
+\]
+Since
+\[
+	\partial_y \left[
+		e^{-iqy} \hat \Psi_s(y)
+	\right] = -iq e^{-iqy} \hat \Psi_s(y) + e^{-iqy} \partial_x \hat \Psi_s(y)
+\]
+and integrating the left-hand side one gets zero, being the chain closed with PBC,
+\[
+	H_0^{(s)} = -i\sgn(s) \frac{v_F}{L} \int_0^L dx \, \hat \Psi_s^\dagger(x) \int_0^L dy \, \partial_x \hat \Psi_s(y) \sum_q e^{iq(x-y)}
+\]
+Using the continuum limit
+\[
+	\frac{1}{L} \sum_q
+	\quad\to\quad
+	\frac{1}{2\pi} \int_\mathbb{R} dq 
+\]
+the $s$-side hamiltonian finally reduces to
+\[
+	H_0^{(s)} = -i\sgn(s) \frac{v_F}{2\pi} \int_0^L dx \, \hat \Psi_s^\dagger(x) \partial_x \hat \Psi_s(x)
+\]
+Then the massless chiral Dirac hamiltonian is recovered:
+\begin{equation}\label{eq:massless-Dirac-hamiltonian}
+	\hat H_0 = \frac{v_F}{2\pi i} \int_0^L dx \, \left[
+		\hat \Psi_\mathrm{R}^\dagger(x) \partial_x \hat \Psi_\mathrm{R}(x) - \hat \Psi_\mathrm{L}^\dagger(x) \partial_x \hat \Psi_\mathrm{L}(x)
+	\right]
+\end{equation}
+Now, all is left to do is to insert interactions in the bosonized hamiltonian and link the model parameters to the Luttinger parameters $u$ and $K$.
+
+\subsection*{Inserting interactions}
+
+The interaction term is of the density-density class,
+\[
+	\hat V = V \sum_{j=1}^L \hat n_j \hat n_{j+1} = a^2 J_z \sum_{j=1}^L \frac{\hat n_j}{a} \frac{\hat n_{j+1}}{a}
+\]
+We identify $\hat n_j/a \to \hat \rho(x=ja)$ as the continuum density, thus giving (splitting in left/right contributions)
+\[
+	\hat V = a^2 J_z \sum_{j=1}^L \hat \rho(ja) \hat \rho\left(
+		\vphantom{A^A} (j+1)a
+	\right)
+\]
+I do not enter in the detailed derivation the reader can find one in \cite[Sec.~6.1.2]{giamarchi2003quantum}. The key property used is that the expansion of $\hat \rho$ can be identically carried out in terms of physical fields $\hat \psi$ or shifted fields $\hat \Psi_s$,
+\[
+	\begin{aligned}
+		\hat \rho(x) &= - \frac{1}{\pi} \nabla \hat \phi(x) + \left[
+			\hat \psi_\mathrm{R}^\dagger(x) \hat \psi_\mathrm{L}(x) + \hat \psi_\mathrm{L}^\dagger(x) \hat \psi_\mathrm{R}(x) 
+		\right] \\
+		&= - \frac{1}{\pi} \nabla \hat \phi(x) + \left[
+			e^{-2ik_F x}
+			\hat \Psi_\mathrm{R}^\dagger(x) \hat \Psi_\mathrm{L}(x) + e^{2ik_F x} \hat \Psi_\mathrm{L}^\dagger(x) \hat \Psi_\mathrm{R}(x) 
+		\right]
+	\end{aligned}
+\]
+and the shifted fields $\hat \Psi_s$ vary \textit{slowly}. This means that, in the limit $a \to 0$ of null lattice spacing, one can approximate the spatial variation as only happening in the fast-oscillating exponents. \todo
