--- a/Report/sections/theory.tex
+++ b/Report/sections/theory.tex
@@ -130,10 +130,12 @@ The difference $\hat \rho_\mathrm{R} - \hat \rho_\mathrm{L}$ is related to the c
 
 For the sake of completeness, here I also report the expression for the fermionic fields in term of the bosonic ones:
 \begin{equation}\label{eq:fermionic-fields-bosonic-fields-expression}
-	\hat \psi_s (x) = \frac{\hat U_s}{2\pi\alpha} \exp\left\{
-		i \sgn(s) \left(
-			k_F x - \hat \phi(x)
-		\right) + i\hat \theta(x)
+	\hat \psi_s (x) = \frac{\hat U_s}{\sqrt{2\pi\alpha}} \exp\left\{
+		i \left(
+			\sgn(s) k_F - \frac{\pi}{L}
+		\right) x - \left(
+			\sgn(s) \hat \phi(x) + \hat \theta(x)
+		\right)
 	\right\}
 	\qquad\left( \alpha \to 0 \right)
 \end{equation}
