--- a/Report/sections/results.tex
+++ b/Report/sections/results.tex
@@ -2,7 +2,6 @@
 \section{Data analysis and results}
 
 \todo
-{\color{tabred}[Todo: change everything from ``we'' to ``I''.]}
 
 \subsection{Ground-state phase physical properties}
 
@@ -12,20 +11,20 @@ As a first analysis, I considered two specific parametric configurations, whose 
 		[s_\mathrm{XY}] &\colon \left(
 			\frac{h}{J_{xy}}, \frac{J_{z}}{J_{xy}}
 		\right) = \left(
-			-\frac{1}{2}, - \frac{1}{4}
+			\cdots
 		\right) &&\to &&\left(
 			\frac{V}{t}, \frac{\mu}{t}
 		\right) = \left(
-			1, \frac{3}{2}
+			\cdots
 		\right) \\
 		[s_\mathrm{IF}] &\colon \left(
 			\frac{h}{J_{xy}}, \frac{J_{z}}{J_{xy}}
 		\right) = \left(
-			-1, \frac{1}{2}
+			\cdots
 		\right) &&\to &&\left(
 			\frac{V}{t}, \frac{\mu}{t}
 		\right) = \left(
-			2, 1
+			\cdots
 		\right) \\
 	\end{aligned}
 \]
